# MyGPU_EDA

./: CMakeLists.txt  README.md  circuit.txt
include/: Netlist.hpp
src/: main.cpp
src/simulation/: kernel.cu
tools/: antlr4
